--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
 			<div class="credits">
 				<p>C&oacute;digo: <a href="https://github.com/JoaquinSiabra" target="_blank">Joaqu&iacute;n Siabra</a> | 
 				 Gr&aacute;ficos: <a href="http://neoriceisgood.deviantart.com/gallery/" target="_blank">Neoriceisgood</a> |
+				 M&uacute;sica: <a href="http://ericskiff.com/music/ " target="_blank">Erik Skiff</a> |
 				 Creado a partir de <a href="http://buildnewgames.com/introduction-to-crafty/" target="_blank">"Introduction to Crafty Game Engine"</a>
 			</div>				  				  
 
