--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
         <div class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
             <li class="active"><a href="#">Home</a></li>
-            <li><a href="#about">About</a></li>
-            <li><a href="#contact">Contact</a></li>
+            <li><a href="https://github.com/JoaquinSiabra/colibri-crafty">C&oacute;digo en GitHub</a></li>
+            <li><a href="https://github.com/JoaquinSiabra">Contacto</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
